--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,6 @@
   column-count: 2; /* For when te standard gets fully supported */
 }
 
-
 .service-list {
 list-style-type: none;
 margin-left:0;
@@ -24,4 +23,35 @@ float:left;
 text-align: left;
 display:inline-block;
 padding: 0;
+}
+
+.bg-modal{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  position: absolute;
+  top: 0px;
+  z-index: 1;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content{
+  width: 600px;
+  height: 300px;
+  background-color: white;
+  border: none;
+  border-radius: 15px;
+  padding: 15px;
+  position: relative
+}
+
+.close{
+  position: absolute;
+  top: 5px;
+  right:10px;
+  font-size: 25px;
+  transform: rotate(45deg);
+  cursor: pointer;
 }
