After adding latin square rotation

--- a/bookrec/templates/bookrec/index.html
+++ b/bookrec/templates/bookrec/index.html
@@ -7,92 +7,60 @@
     <h2>Research scenario</h2>
     <p>
         Imagine you are a big fan of science-fiction books and are looking for a new book to read. To assist you, you are using the help of four different recommendation systems, each of which has created a top-10 list for you. These lists show books that are recommended based on your interests. The first book in each list represents the system's best-fit recommendation. Clicking on the cover page of each book will open the corresponding GoodReads webpage in a new tab. Please familiarize yourself with each book on the recommended lists and complete the questionnaire afterward.
+    </p>
     <div style="float:left; width: 29%">
         <h3>List A (10 Books)</h3>
-            {% if books_ii %}
-                <ul>
-                    {% for book in books_ii %}
-                        <li class="service-list">
-                            <a href="{{ book.book_url }}" target="_blank">
-                                <img src="{{ book.cover_page }}" alt=""/>
-                            </a>
-                            <p>
-                                <strong>{{ book.title_without_series }}</strong><br>
-                                {{ book.publication_year }} published by {{ book.publisher }}<br>
-                                {{ book.book_average_rating }}<br>
-                                <button class="btn btn-dark"
-                                        title="Book description"
-                                        data-toggle="popover"
-                                        data-trigger="focus"
-                                        data-content="{{ book.book_description }}"
-                                        data-placement="bottom">
-                                    Book description
-                                </button>
-                            </p>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                There are no books yet.
-            {% endif %}
+        {% if books_a %}
+            <ul>
+                {% for book in books_a %}
+                    <li class="service-list">
+                        <a href="{{ book.book_url }}" target="_blank">
+                            <img src="{{ book.cover_page }}" alt=""/>
+                        </a>
+                        <p>
+                            <strong>{{ book.title_without_series }}</strong><br>
+                            {{ book.publication_year }} published by {{ book.publisher }}<br>
+                            {{ book.book_average_rating }}<br>
+                            <button class="btn btn-dark"
+                                    title="Book description"
+                                    data-toggle="popover"
+                                    data-trigger="focus"
+                                    data-content="{{ book.book_description }}"
+                                    data-placement="bottom">
+                                Book description
+                            </button>
+                        </p>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
     </div>
-    <div style="float:left; width: 30%">
+    <div style="float:left; width: 29%">
         <h3>List B (10 Books)</h3>
-            {% if books_uu %}
-                    <ul>
-                    {% for book in books_uu %}
-                        <li class="service-list">
-                            <a href="{{ book.book_url }}" target="_blank">
-                                <img src="{{ book.cover_page }}" alt=""/>
-                            </a>
-                            <p>
-                                <strong>{{ book.title_without_series }}</strong><br>
-                                {{ book.publication_year }} published by {{ book.publisher }}<br>
-                                {{ book.book_average_rating }}<br>
-                                <button class="btn btn-dark"
-                                        title="Book description"
-                                        data-toggle="popover"
-                                        data-trigger="focus"
-                                        data-content="{{ book.book_description }}"
-                                        data-placement="bottom">
-                                    Book description
-                                </button>
-                            </p>
-                        </li>
-                    {% endfor %}
-                </ul>
-                {% else %}
-                    There are no books yet.
-                {% endif %}
-    </div>
-    <div style="float:left; width: 34%">
-        <h3>List C (10 Books)</h3>
-            {% if books_als %}
-                    <ul>
-                    {% for book in books_als %}
-                        <li class="service-list">
-                            <a href="{{ book.book_url }}" target="_blank">
-                                <img src="{{ book.cover_page }}" alt=""/>
-                            </a>
-                            <p>
-                                <strong>{{ book.title_without_series }}</strong><br>
-                                {{ book.publication_year }} published by {{ book.publisher }}<br>
-                                {{ book.book_average_rating }}<br>
-                                <button class="btn btn-dark"
-                                        title="Book description"
-                                        data-toggle="popover"
-                                        data-trigger="focus"
-                                        data-content="{{ book.book_description }}"
-                                        data-placement="bottom">
-                                    Book description
-                                </button>
-                            </p>
-                        </li>
-                    {% endfor %}
-                </ul>
-                {% else %}
-                    There are no books yet.
-                {% endif %}
+        {% if books_b %}
+            <ul>
+                {% for book in books_b %}
+                    <li class="service-list">
+                        <a href="{{ book.book_url }}" target="_blank">
+                            <img src="{{ book.cover_page }}" alt=""/>
+                        </a>
+                        <p>
+                            <strong>{{ book.title_without_series }}</strong><br>
+                            {{ book.publication_year }} published by {{ book.publisher }}<br>
+                            {{ book.book_average_rating }}<br>
+                            <button class="btn btn-dark"
+                                    title="Book description"
+                                    data-toggle="popover"
+                                    data-trigger="focus"
+                                    data-content="{{ book.book_description }}"
+                                    data-placement="bottom">
+                                Book description
+                            </button>
+                        </p>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
     </div>
    <script>
         $('[data-toggle="popover"]').popover();
