--- a/bookrec/templates/bookrec/index.html
+++ b/bookrec/templates/bookrec/index.html
@@ -3,72 +3,81 @@
 {%  load static %}
 
 {% block body_block %}
-    <h1>User perception on book recommendation systems</h1>
+    <h1>User perception of book recommendation systems</h1>
     <h2>Research scenario</h2>
     <p>
         Imagine you are a big fan of science-fiction books and are looking for a new book to read. To assist you, you are using the help of four different recommendation systems, each of which has created a top-10 list for you. These lists show books that are recommended based on your interests. The first book in each list represents the system's best-fit recommendation. Clicking on the cover page of each book will open the corresponding GoodReads webpage in a new tab. Please familiarize yourself with each book on the recommended lists and complete the questionnaire afterward.
     </p>
-    <div style="float:left; width: 30%">
-        <h3>List A (10 Books)</h3>
-        {% if books_a %}
-            <ul>
-                {% for book in books_a %}
-                    <li class="service-list">
-                        <a href="{{ book.book_url }}" target="_blank">
-                            <img src="{{ book.cover_page }}" alt=""/>
-                        </a>
-                        <p>
-                            <strong>{{ book.title_without_series }}</strong><br>
-                            {{ book.publication_year }} published by {{ book.publisher }}<br>
-                            {{ book.book_average_rating }}<br>
-                            <button class="btn btn-dark"
-                                    title="Book description"
-                                    data-toggle="popover"
-                                    data-trigger="focus"
-                                    data-content="{{ book.book_description }}"
-                                    data-placement="bottom">
-                                Book description
-                            </button>
-                        </p>
-                    </li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    </div>
-    <div style="float:left; width: 30%">
-        <h3>List B (10 Books)</h3>
-        {% if books_b %}
-            <ul>
-                {% for book in books_b %}
-                    <li class="service-list">
-                        <a href="{{ book.book_url }}" target="_blank">
-                            <img src="{{ book.cover_page }}" alt=""/>
-                        </a>
-                        <p>
-                            <strong>{{ book.title_without_series }}</strong><br>
-                            {{ book.publication_year }} published by {{ book.publisher }}<br>
-                            {{ book.book_average_rating }}<br>
-                            <button class="btn btn-dark"
-                                    title="Book description"
-                                    data-toggle="popover"
-                                    data-trigger="focus"
-                                    data-content="{{ book.book_description }}"
-                                    data-placement="bottom">
-                                Book description
-                            </button>
-                        </p>
-                    </li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    </div>
-    <div style="float:right; width: 40%">
-        {% if survey %}
-        <h3>{{ survey.title }}</h3>
-        {% else %}
-        There is no survey with that rotation state!
-        {% endif %}
-        {{ form.as_p }}
+    <div class="container-scrollable">
+        <div class="scrollable-content left">
+            <div style="float:left; width: 50%">
+                <h3>List A (10 Books)</h3>
+                {% if books_a %}
+                <ul>
+                    {% for book in books_a %}
+                        <li class="service-list">
+                            <a href="{{ book.book_url }}" target="_blank">
+                                <img src="{{ book.cover_page }}" alt=""/>
+                            </a>
+                            <p>
+                                <strong>{{ book.title_without_series }}</strong><br>
+                                {{ book.publication_year }} published by {{ book.publisher }}<br>
+                                {{ book.book_average_rating }}<br>
+                                <button class="btn btn-dark"
+                                        title="Book description"
+                                        data-toggle="popover"
+                                        data-trigger="focus"
+                                        data-content="{{ book.book_description }}"
+                                        data-placement="bottom">
+                                    Book description
+                                </button>
+                                </p>
+                            </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+            <div style="float:right; width: 50%">
+            <h3>List B (10 Books)</h3>
+            {% if books_b %}
+                <ul>
+                    {% for book in books_b %}
+                        <li class="service-list">
+                            <a href="{{ book.book_url }}" target="_blank">
+                                <img src="{{ book.cover_page }}" alt=""/>
+                            </a>
+                            <p>
+                                <strong>{{ book.title_without_series }}</strong><br>
+                                {{ book.publication_year }} published by {{ book.publisher }}<br>
+                                {{ book.book_average_rating }}<br>
+                                <button class="btn btn-dark"
+                                        title="Book description"
+                                        data-toggle="popover"
+                                        data-trigger="focus"
+                                        data-content="{{ book.book_description }}"
+                                        data-placement="bottom">
+                                    Book description
+                                </button>
+                            </p>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        </div>
+        <div class="scrollable-content">
+            <div>
+                {% if survey %}
+                <h3>{{ survey.title }}</h3>
+                {% else %}
+                There is no survey with that rotation state!
+                {% endif %}
+                <p>
+                    In the following, you need to put yourself in the role of the science fiction book fan described above. So when "you" is mentioned, it refers to the user described in the research scenario, not you as a person. List A and B contain the top movie recommendations for you from different "recommender". Please answer the following questions to help us understand your preferences about these recommenders.
+                </p>
+                {{ form.as_p }}
+            </div>
+        </div>
     </div>
    <script>
         $('[data-toggle="popover"]').popover();
