--- a/static/style.css
+++ b/static/style.css
@@ -1,28 +1,119 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-.center {
-  margin: auto;
-  width: 60%;
-  border: gray;
+body, html {
+  font-family: Open-Sans, sans-serif;
+  margin:0;
+  padding: 0;
+  min-height: 100vh;
+}
+
+ul {
+  padding-left: 0;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: #ececec;
+  color: black;
+}
+
+.header-title {
+  flex: 1;
+  margin: 0;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.header-image {
+  max-width: 250px;
+  height: auto;
+  margin-left: 20px;
+}
+
+.container-scrollable {
+  display: flex;
+}
+
+.scrollable-content {
+  flex: 1;
+  max-height: 600px;
+  overflow-y: scroll;
+  border: 1px solid grey;
   padding: 10px;
 }
 
-.service-list {
-list-style-type: none;
-margin-left:0;
-  margin-top: 10px;
-padding-left:0;
-display: inline-block;
+.scrollable-content.left {
+  flex: 1.3;
 }
 
-.service-list img
-{
-float:left;
+.service-list {
+  list-style-type: none;
+  margin-left:0;
+  margin-top: 10px;
+  padding-left:0;
+  display: inline-block;
+}
+
+.service-list img {
+  float:left;
+  margin: 0;
+  padding: 0;
 }
 
 .service-list p,.service-list h3 {
-text-align: left;
-display:inline-block;
-padding: 0;
+  text-align: left;
+  display:inline-block;
+  padding: 0;
+}
+
+footer {
+  background-color: #3c3c3b;
+  color: white;
+  padding: 10px 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-image {
+  margin: 0px 10px 0px 20px;
+
+}
+
+/* Style the image */
+.footer-image img {
+    max-height: 50px; /* Set the maximum width of the image */
+    height: auto; /* Maintain the aspect ratio */
+}
+
+.container-footer {
+  max-width: none;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-content p {
+  margin: 10px;
+}
+
+.footer-content a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-content a:hover {
+  text-decoration: underline;
 }
 
