--- a/bookrec/templates/bookrec/base.html
+++ b/bookrec/templates/bookrec/base.html
@@ -25,7 +25,7 @@
         <h1 class="header-title">Survey on User Perception of Differences in Book Recommender Algorithms</h1>
         <a href="https://www.uni-koblenz.de/de/informatik" target="_blank"> <img src="../../../static/images/UK_FB4_Logo_eng_Schutzraum.png" alt="Logo" class="header-image"></a>
     </header>
-    <div class="content">
+    <div class="container-main">
         {% block body_block %}{% endblock %}
     </div>
     <footer>
@@ -36,7 +36,7 @@
                 <p><a href="https://md.ekstrandom.net/static/pubs/listcmp.pdf" target="_blank">Research inspired by</a></p>
             </div>
             <div class="footer-image">
-                <a href="https://www.uni-koblenz.de/de" target="_blank"> <img src="../../../static/images/UK_Pfeil_CMYK.png" alt="Image Description"></a>
+                <a href="https://www.uni-koblenz.de/de/informatik/west/team/professors/frank-hopfgartner" target="_blank"> <img src="../../../static/images/UK_Pfeil_CMYK.png" alt="Image Description"></a>
             </div>
         </div>
     </footer>
