--- a/static/style.css
+++ b/static/style.css
@@ -1,21 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-body, html {
+body {
   font-family: Open-Sans, sans-serif;
-  margin:0;
-  padding: 0;
-  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
+
+.container-main {
+  background-color: #ececec;
+  margin-bottom: 50px;
+  min-height: calc(100vh - 100px);
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 
 ul {
   padding-left: 0;
+  display: inline-block;
 }
 
 .header {
   display: flex;
   align-items: center;
-  padding: 10px;
-  background-color: #ececec;
+  padding: 5px;
+  background-color: #7b7b7a;
   color: black;
 }
 
@@ -41,7 +52,9 @@ ul {
   max-height: 600px;
   overflow-y: scroll;
   border: 1px solid grey;
-  padding: 10px;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+  padding-left: 5px;
 }
 
 .scrollable-content.left {
@@ -51,7 +64,7 @@ ul {
 .service-list {
   list-style-type: none;
   margin-left:0;
-  margin-top: 10px;
+  margin-top: 20px;
   padding-left:0;
   display: inline-block;
 }
@@ -63,6 +76,7 @@ ul {
 }
 
 .service-list p,.service-list h3 {
+  margin-left: 10px;
   text-align: left;
   display:inline-block;
   padding: 0;
@@ -79,28 +93,26 @@ footer {
 
 .footer-image {
   margin: 0px 10px 0px 20px;
-
 }
 
 /* Style the image */
 .footer-image img {
     max-height: 50px; /* Set the maximum width of the image */
-    height: auto; /* Maintain the aspect ratio */
+    width: auto; /* Maintain the aspect ratio */
 }
 
 .container-footer {
   max-width: none;
-  margin: 0 auto;
+  margin: auto;
   text-align: center;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
 .footer-content {
+  margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -109,7 +121,7 @@ footer {
 }
 
 .footer-content a {
-  color: #fff;
+  color: white;
   text-decoration: none;
 }
 
