--- a/static/style.css
+++ b/static/style.css
@@ -6,14 +6,20 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  background-color: #ececec;
 }
 
 .container-main {
-  background-color: #ececec;
-  margin-bottom: 50px;
-  min-height: calc(100vh - 100px);
+  margin-top: 5px;
+  margin-bottom: 75px;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ul-rec-list {
@@ -47,16 +53,15 @@ body {
 
 .scrollable-content {
   flex: 1;
-  max-height: 600px;
+  max-height: 750px;
   overflow-y: scroll;
   border: 1px solid grey;
-  padding-bottom: 20px;
-  margin-bottom: 10px;
   padding-left: 5px;
+  padding-bottom: 5px;
 }
 
 .scrollable-content.left {
-  flex: 1.3;
+  flex: 1.8;
 }
 
 .service-list {
